# mandelbrot

./: CMakeLists.txt  config.json  main.cpp
include/: Client.h  Colormap.h  Complex.h  Mandelbrot.h
src/: Client.cpp  Colormap.cpp  Complex.cpp  Mandelbrot.cpp
styles/: magma.json
